test/Fail/Issue142.err
Issue142.agda:13.7-12: error: [UnequalTerms]
n + n != n of type Nat
when checking that the given dot pattern n + n matches the inferred
value n
